--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simple login system using express validator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node index.js"
   },
   "author": "Chiru",
   "license": "ISC",
@@ -14,6 +15,6 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
-    "mongoose": "^5.4.19"
+	"mongoose": "^6.5.2"
   }
 }
